# kwin-effects-better-blur-dx

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
docs/: configuration.md
nix/: package-x11.nix  package.nix
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  blur_extensions.cpp  metadata.json  settings.cpp  settings.h  utils.h
src/kcm/: CMakeLists.txt  about.html  blur_config.cpp  blur_config.h  blur_config.ui
src/shaders/: upsample.frag  upsample.glsl  upsample_core.frag  upsample_core.glsl
tools/: plasma-nested.sh
